<resources>
    <string name="app_name">MemoList</string>
    <string name="information">Information</string>
    <string name="information_1">This app was created in order to provide a faster way to create memos, planned to be lightweight.</string>
    <string name="information_2">The app was planned to be an experiment for my main app in which I named StudyInterval. In other words, I didn\'t expect to finish this.</string>
    <string name="information_3">In any case, please enjoy the app as I do not not plan to post ads or what not on here. It makes everything look ugly as well as interfere with the interface.</string>
    <string name="information_4">Overall, I\'m not being monetized to create this app. At the end of this text, feel free to send donations and help cover the cost of uploading this app. Enjoy!</string>
    <string name="donate">Donate</string>
    <string name="confirm">Confirm</string>
    <string name="help">Help</string>
    <string name="help_1">- Select between making a category or topic</string>
    <string name="help_2">- Manually sort by long pressing and dragging</string>
    <string name="help_3">- Delete by tapping the item</string>
    <string name="help_4">- Click the notification button if you wish to create a notification</string>
    <string name="help_5">Notification options reset after every memo</string>
    <string name="settings">Settings</string>
    <string name="clear_list">Clear list</string>
    <string name="change_font_initial">Change Font [10]:</string>
    <string name="notifications">Notifications</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="input_memo">Input memo</string>
    <string name="add">Add</string>
    <string name="importance_rating">Importance Rating</string>
    <string name="schedule">Schedule</string>
    <string name="schedule_event">Schedule Event</string>
    <string name="default_0">0</string>
    <string name="max_seek">10</string>
    <string name="show_last_edit">Show last edit</string>
    <string name="show_alarm">Show alarm</string>

    <string-array name="input_list">
        <item>Topic</item>
        <item>Category</item>
    </string-array>
    <string-array name="color_scheme_list">
        <item>Light</item>
        <item>Dark</item>
        <item>FluffPink</item>
    </string-array>
</resources>
