<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.example.memolist.activity.main">

    <LinearLayout
        android:id="@+id/option_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

        </Spinner>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <SeekBar
                android:id="@+id/importance_seeker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="10" />

            <TextView
                android:id="@+id/importance_seeker_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/importance_seeker"
                android:textSize="10sp"
                android:textColor="?attr/primaryTextColor"
                android:text="@string/default_0"
                android:layout_marginStart="13dp"/>

            <TextView
                android:id="@+id/importance_seeker_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/importance_seeker"
                android:textSize="10sp"
                android:textColor="?attr/primaryTextColor"
                android:text="@string/max_seek"
                android:layout_marginEnd="10dp"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/option_layout"
        android:layout_above="@+id/input_layout"
        android:orientation="vertical">

        <com.example.memolist.CustomExpandableListView
            android:id="@+id/category_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:maxHeightDp="300">

        </com.example.memolist.CustomExpandableListView>

        <com.example.memolist.CustomListView
            android:id="@+id/memo_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.example.memolist.CustomListView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <EditText
            android:id="@+id/memo_input"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="?attr/primaryTextColor"
            android:textColorHint="?attr/secondaryTextColor"
            android:backgroundTint="?attr/colorAccent"
            android:hint="@string/input_memo"/>

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add" />

    </LinearLayout>

</RelativeLayout>